# front-tier

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  test-acme-api.sh  test-acme-config.toml  test-acme.sh
.claude/: settings.local.json
docs/: ACME_API.md  ACME_INTEGRATION_TEST.md  DNS01_CHALLENGE.md  用户手册.md
docs/plans/: 2026-01-17-pingora-vhost-design.md  2026-01-17-pingora-vhost-implementation.md
src/: backend_pool.rs  config.rs  health_check.rs  lib.rs  main.rs  proxy.rs  state.rs
src/api/: backends.rs  certificates.rs  domains.rs  mod.rs  server.rs
src/observability/: logging.rs  metrics.rs
src/tls/: acme_manager.rs  certificate_manager.rs  challenge_handler.rs  mod.rs  proxy_service.rs  renewal.rs  watcher.rs
src/tls/dns_provider/: aliyun.rs  factory.rs  mod.rs
tests/: acme_challenge_test.rs  acme_integration_test.rs  api_backends_test.rs  api_domains_test.rs  api_test.rs  backend_pool_test.rs  certificate_manager_test.rs  config_test.rs  dns01_integration_test.rs  health_check_test.rs  integration_test.rs  metrics_endpoint_test.rs  metrics_test.rs  tls_config_parsing_test.rs  tls_integration_test.rs
tests/fixtures/certs/: example.com.crt  example.com.key  test.org.crt  test.org.key
