[package]
name = "pingora-vhost"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { git = "https://github.com/cloudflare/pingora" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
rustls = "0.21"
acme-lib = "0.8"
anyhow = "1.0"
thiserror = "1.0"
sfv = "0.9.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["rustls-tls"] }
