[package]
name = "pingora-vhost"
version = "0.1.0"
edition = "2021"

[dependencies]
# Note: Using git version due to sfv crate compatibility issues with pingora 0.1 on crates.io
# See: https://github.com/cloudflare/pingora/issues/568 and /issues/595
pingora = { git = "https://github.com/cloudflare/pingora" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
rustls = "0.21"
rustls-pemfile = "1.0"
acme-lib = "0.8"
pingora-rustls = { git = "https://github.com/cloudflare/pingora" }
x509-parser = "0.15"
notify = "6.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1"
