[package]
name = "pingora-vhost"
version = "0.1.0"
edition = "2021"

[dependencies]
# Note: Using git version due to sfv crate compatibility issues with pingora 0.1 on crates.io
# See: https://github.com/cloudflare/pingora/issues/568 and /issues/595
# OpenSSL feature is required for SNI callbacks in TLS
# Proxy feature is required for ProxyHttp trait and related functionality
pingora = { git = "https://github.com/cloudflare/pingora", features = ["openssl", "proxy"] }
pingora-proxy = { git = "https://github.com/cloudflare/pingora" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
prometheus = "0.13"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
rustls = "0.21"
rustls-pemfile = "1.0"
acme-lib = "0.9"
x509-parser = "0.15"
notify = "6.0"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
sha1 = "0.10"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
